Fri Dec 12 09:36:34 2003  George Lebl <jirka@5z.com>

	* gui/gdmcomm.c: check ownership of /tmp/.gdm_socket before using

Wed Dec 10 15:33:09 2003  George Lebl <jirka@5z.com>

	* daemon/display.c: Fix #126465 where xdmcp_sessions would not
	  get decremented on normal logout.  Doh!  Just do a recount of
	  all the limits on display dispose that is just a lot more robust.

Fri Oct 17 10:54:12 2003  George Lebl <jirka@5z.com>

	* Release 2.4.4.5

Fri Oct 17 10:40:08 2003  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c, gui/greeter/greeter_item_ulist.c:  Apply patch
	  from Frederic Crozat <fcrozat@mandrakesoft.com> to make gecos 
	  into utf8 before displaying it in the face browser.

	* daemon/auth.c: make sure that umask 077 before reopening the
	  .Xauthority since apparently it can happen that the file doesn't
	  exist then.

Thu Oct 16 09:55:55 2003  George Lebl <jirka@5z.com>

	* Release 2.4.4.4

	* config/shell-extract.sh: fix extracting of text from
	  shell scripts.

Thu Oct 16 09:13:48 2003  George Lebl <jirka@5z.com>

	* daemon/gdm.[ch], daemon/gdm-net.[ch]: Make the socket connection
	  non-blocking and limit conversations to 20 requests.  Also
	  cut lines short at 4096.  Fixes CAN-2003-0793 and CAN-2003-0794
	  respectively.

	* daemon/slave.c: fix #123958 by clearing the message after
	  authentication is done for the configurator.

	* daemon/Makefile.am, gui/greeter/Makefile.am, gui/Makefile.am,
	  gui/modules/Makefile.am:  The disable_deprecated defines should
	  only be on for conformance testing I suppose.  Fixes #124680

Wed Oct 15 14:19:59 2003  George Lebl <jirka@5z.com>

	* gui/greeter/greeter_item.c: the rich string parsing routine was
	  broken if the underline was for the last letter.  Fixes bug
	  discussed in rh #106189

Sun Oct 12 05:55:20 2003  Richard Allen <ra@ra.is>

	* Added is.po

Fri Oct 10 13:58:47 2003  George Lebl <jirka@5z.com>

	* config/gdm.conf.in: forgot to add -audit 0 to Xnest
